core/sass/pages/high-potential-opportunity-detail.scss
@import '../partials/base';

#content {
  padding-top: 0;
}
#hero {
  height: 300px;
  background-repeat: no-repeat;
  background-size: cover;
  color: white;
  .breadcrumbs {
    visibility: hidden; // TT-449
    background-color: transparent;
    border: 0;

    a, .current {
      text-decoration: underline;
      color: white;
    }

    a:visited {
      color: white;
    }
  }
  .container {
    position: relative;
    height: 100%;
    img {
      width: 148px;
      position: absolute;
      right: 0;
      bottom: 45px;
    }
  }
}

#contact-section {
  margin-top: 50px;
  padding-bottom: 0;
  margin-bottom: 30px;
  position: relative;
  & {
    position: sticky;
    width: 100%;
    top: 10px;
    z-index: 1;
  }
  h3 {
    margin-top: 0;
  }
  p {
    font-size: 15px;
  }
  .grid-row {
    margin: 0;
    display: flex;
    background-color: #dfd5c5;
    padding-top: 30px;
    padding-bottom: 30px;
    padding-left: 45px;
  }
  .proposition-container {
    width: 56%;
    display: inline-block;
  }
  .button-container {
    margin-top: auto;
    margin-bottom: auto;
    margin-left: 105px;
    a {
      padding-left: 70px;
      padding-right: 70px;
      margin-left: 50px;
    }
  }
}

#proposition-one {
  padding-bottom: 60px;
  img {
    width: 570px;
  }
  h3 {
    margin-top: 30px;
  }
}


#opportunity-list {
  padding-top: 60px;
  padding-bottom: 60px;
  background-color: #f5f2ed;
  h2{
    margin-top: 0;
  }
  h3, p {
    color: #333333;
    line-height: 1.5;
  }
  h3 {
    margin-bottom: 10px;
    font-size: 24px;
  }
  p{
    margin-top: 0;
    font-size: 15px;
  }
  li {
    counter-increment: li;
    list-style: none;
    position: relative;
    &:before{
      font-family: "Overpass",arial,helvetica,verdana,sans-serif;
      font-weight: 800;
      line-height: 45px;
      background: none;
      color: #dfd5c5;
      content: counter(li) " ";
      display: block;
      font-size: 60px;
      left: -130px;
      line-height: 60px;
      position: absolute;
      text-align: right;
      width: 100px;
    }
  }
  img {
    max-width: 470px;
    margin-left: auto;
    margin-right: auto;
    margin-top: 30px;
    display: block;
  }
}

#proposition-two {
  padding-top: 60px;
  padding-bottom: 0;
  h2 {
    margin-top: 0;
  }
  .proposition-two-container {
    padding-bottom: 45px;
  }
  ul.top-level-list {
    column-count: 2;
    & > li {
      border-top: 4px solid #b00d23;
      padding-bottom: 30px;
    }
  }
  ul {
    font-size: 15px;
    li {
      -webkit-column-break-inside: avoid;
                page-break-inside: avoid;
                     break-inside: avoid;
      h3 {
        margin-top: 14px;
      }
    }
  }
  img {
    width: 470px;
    margin-left: auto;
    margin-right: auto;
    display: block;
  }
  #proposition-one-media-container {
    height: 0;
  }
}

#competitive-advantages {
  padding-top: 90px;
  padding-bottom: 90px;
  background-color: #f6f4f1;
  h2 {
    margin-bottom: 60px;
    margin-top: 0;
  }
  h3 {
    margin-top: 0;
    margin-bottom: 15px;
  }
  ul.top-level-list {
    column-count: 3;
    & > li {
    }
  }
  img {
    position: absolute;
    height: 40px;
    left: -20px;
  }
  .column-one-third {
    position: relative;
    padding-left: 30px;
  }
  .grid-row {
    margin-left: 20px;
  }
}

#testimonial {
  background-repeat: no-repeat;
  background-size: cover;
  blockquote {
    margin-top: 80px;
    margin-bottom: 80px;
    margin-left: 250px;
    margin-right: 250px;
    border-top: 4px solid #b00d23;
    padding-top: 45px;
    padding-left: 0;
    padding-right: 0;
    color: white;
  }
}

#company-list{
  background-color: #f5f2ed;
  padding-top: 60px;
  padding-bottom: 75px;
  h2 {
    margin-top: 0;
  }
  img {
     width: 270px;
     margin-right: 30px;
  }
  ul {
    margin-top: 70px;
    column-count: 4;
    li {
      margin-bottom: 30px;
    }
  }
}

#case-studies {
  .column-one-half {
    padding-left: 0;
  }
  img {
    max-width: 570px;
    margin-left: auto;
    margin-right: auto;
    display: block;
  }
  .grid-row {
    border-bottom: 1px solid #E9E9E9;
    padding-bottom: 30px;
    margin-bottom: 30px;
  }
  .grid-row:last-child {
    padding-bottom: 0;
    border-bottom: none;
  }
}

#other-opportunities {
  background-color: #f6f4f1;
  padding-top: 60px;
  padding-bottom: 60px;
  margin-bottom: 30px;
  h2 {
    margin-top: 0;
  }
  h3 {
    margin-bottom: 0;
  }
}

@media (max-width: 769px) {
  #hero {
    padding-top: 0;

    .container {
      img {
        position: relative;
        top: 0;
        left: 0;
      }
    }

  }

  #contact-section {
    position: relative;
    margin-bottom: 0;
    margin-top: 0;
    h3 {
      font-size: 24px;
    }
    .grid-row {
      display: block;
      padding-left: 10px;
      padding-top: 30px;
      padding-right: 10px;
    }
    .proposition-container {
      padding: 0;
    }
    .button-container {
      margin-left: auto;
      padding: 0;
    }
    .proposition-container,
    .button-container {
      width: 100%;
      a {
        margin-left: 0;
      }
    }
  }

  #proposition-one {
    padding-top: 0;
    padding-bottom: 10px;
    .container {
      padding-left: 10px;
      padding-right: 10px;
    }
    h3 {
      font-size: 24px;
    }
    img {
      width: 100%;
    }
  }

  #opportunity-list {
    padding-top: 30px;
    padding-bottom: 30px;
    h2 {
      font-size: 24px;
      margin-left: 10px;
    }
    .grid-row {
      margin-left: 45px;
    }
    .column-one-third {
      padding-left: 0;
    }
    ol {
      padding-left: 0;
      li {
        &:before {
          font-size: 48px;
          line-height: 60px;
          left: -115px;
        }
        h3 {
          margin-top: 0;
          margin-bottom: 5px;
        }
        p.body-text {
          margin-bottom: 0;
        }
      }
    }
    img {
      width: 100%;
      margin-left: -45px; // counteract the effects of .grid-row's margin-left
    }
  }

  #proposition-two {
    padding-top: 30px;
    padding-bottom: 10px;
    .proposition-two-container {
      padding-bottom: 15px;
      p {
        margin-bottom: 0;
      }
    }
    img {
      width: 100%;
      margin-bottom: 15px;
    }
    ul.top-level-list {
      column-count: 1;
      li {
        padding-bottom: 0;
      }
    }
    #proposition-one-media-container {
      height: auto;
    }
  }

  #competitive-advantages {
    padding-top: 30px;
    padding-bottom: 20px;
    h2 {
      margin-bottom: 30px;
    }
    img {
      left: 15px;
    }
    .column-one-third {
      padding-left: 70px;
    }
    .grid-row {
      margin-left: -15px;
    }
  }

  #testimonial {
    margin-bottom: 0;
    padding-bottom: 0;
    blockquote {
      margin-top: 0;
      margin-left: 30px;
      margin-right: 30px;
      margin-bottom: 0;
    }
  }

  #company-list {
    padding-top: 30px;
    padding-bottom: 0;
    img {
      width: 150px;
    }
    ul {
      column-count: 2;
      margin-top: 0;
    }
  }

  #case-studies {
    padding-top: 20px;
    padding-bottom: 30px;
    h2 {
      margin-top: 0;
    }
    img {
      width: 100%;
    }
  }

  #other-opportunities {
    padding-top: 30px;
    padding-bottom: 30px;
    h2 {
      margin-left: 10px;
      font-size: 24px;
    }
    .column-one-half {
      width: 100%;
    }
  }
}

